--- a/app/index.html
+++ b/app/index.html
@@ -44,51 +44,51 @@
       </section>
       <section class="row cloth">
         <!-- <div id="clothSlider" class="col-lg-6"></div> -->
-        <div class="col-md-4 col-xs-4 middle">
+        <div class="col-md-4 col-xs-4 middle bg-grey">
           <img src="images/cloth.svg"/>
-          <div class="time">本月</div>
+          <div class="time explain">本月</div>
         </div>
-        <div class="col-md-4 col-xs-4 middle">
+        <div class="col-md-4 col-xs-4 middle bg-white">
           <div class="rdSlider center" id="cloth1"></div>
-          <div>購買新衣服</div>
+          <div class="explain">購買新衣服</div>
         </div>
-        <div class="col-md-4 col-xs-4 middle">
+        <div class="col-md-4 col-xs-4 middle bg-white">
           <div class="rdSlider center" id="cloth2"></div>
-          <div>回收舊衣服</div>
+          <div class="explain">回收舊衣服</div>
         </div>
       </section>
       <section class="row food">
-        <div class="col-md-4 col-xs-4 middle">
+        <div class="col-md-4 col-xs-4 middle bg-white">
           <img src="images/food.svg"/>
-          <div class="time">每日</div>
+          <div class="time explain">每日</div>
         </div>
-        <div class="col-md-4 col-xs-4 middle">
+        <div class="col-md-4 col-xs-4 middle bg-grey">
           <div class="rdSlider center" id="food1"></div>
-          <div>吃肉類食物</div>
+          <div class="explain">吃肉類食物</div>
         </div>
-        <div class="col-md-4 col-xs-4 middle">
+        <div class="col-md-4 col-xs-4 middle bg-grey">
           <div class="rdSlider center" id="food2"></div>
-          <div>浪費食物</div>
+          <div class="explain">浪費食物</div>
         </div>
       </section>
       <section class="row house">
-        <div class="col-md-4 col-xs-4 middle">
+        <div class="col-md-4 col-xs-4 middle bg-grey">
           <img src="images/house.svg"/>
-          <div class="middle">本月</div>
+          <div class="middle explain">本月</div>
         </div>
-        <div class="col-md-8 col-xs-8 house-slider ">
-          <input id="house1" class="verticleSlider" data-slider-id='ex1Slider' type="text"/><span> 水 </span><span class="notation" id="house1Value" value="0"></span><span>度</span>
-          <input id="house2" class="verticleSlider" data-slider-id='ex1Slider' type="text"/><span> 電 </span><span class="notation" id="house2Value" value="0"></span><span>度</span>
-          <input id="house3" class="verticleSlider" data-slider-id='ex1Slider' type="text"/><span> 煤氣 </span><span class="notation" id="house3Value" value="0"></span><span>度</span>
-          <input id="house4" class="verticleSlider" data-slider-id='ex1Slider' type="text"/><span> 石油氣 </span><span class="notation" id="house4Value" value="0"></span><span>度</span>
+        <div class="col-md-8 col-xs-8 house-slider bg-white">
+          <input id="house1" class="verticleSlider" data-slider-id='ex1Slider' type="text"/><div class="measure"><span class="notation" id="house1Value" value="0"></span> 度水 </div>
+          <input id="house2" class="verticleSlider" data-slider-id='ex1Slider' type="text"/><div class="measure"><span class="notation" id="house2Value" value="0"></span> 度電</div>
+          <input id="house3" class="verticleSlider" data-slider-id='ex1Slider' type="text"/><div class="measure"></span><span class="notation" id="house3Value" value="0"></span> 度煤氣</div>
+          <input id="house4" class="verticleSlider" data-slider-id='ex1Slider' type="text"/><div class="measure"><span class="notation" id="house4Value" value="0"></span> 度石油氣</div>
         </div>
       </section>
       <section class="row transport">
-        <div class="col-md-4 col-xs-4 middle">
+        <div class="col-md-4 col-xs-4 middle bg-white">
           <img src="images/transport.svg"/>
-          <div class="time">每日</div>
+          <div class="time explain">每日</div>
         </div>
-        <div class="col-md-4 col-xs-4 transport-button middle">
+        <div class="col-md-4 col-xs-4 transport-button middle bg-grey">
           <!-- <div class="btn-group btn-group-justified" role="group">
             <div class="btn-group" role="group">
               <button type="button" class="btn btn-info" id="mtr">MTR</button>
@@ -118,7 +118,7 @@
               MTR <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-              <li><a id="mtr">MTR</a></li>
+              <li><a id="mtr" class="selected">MTR</a></li>
               <li><a id="taxi">的士</a></li>
               <li><a id="bus">巴士</a></li>
               <li><a id="minibus">小巴</a></li>
@@ -128,9 +128,9 @@
           </div>
           <div>常用交通工具</div>
         </div>
-        <div class="col-md-4 col-xs-4 middle">
+        <div class="col-md-4 col-xs-4 middle bg-grey">
           <div class="rdSlider center" id="transport"></div>
-          <div>所花費用/行駛距離</div>
+          <div id="transportnote">所花費用</div>
         </div>
       </section>
           
