add meta info and readme

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <meta property="og:type" content="article"> <meta property="og:url" content="http://carboncalc.initiumlab.com/"> <meta property="og:title" content="碳排放計算器">
     <meta property="og:description" content="您知道每天的活動行為都會排放出二氧化碳嗎？只要您改變一點點習慣就可以減少溫室氣體的排放唷！馬上就來算算看您本月份的碳足跡吧！">
     <meta property="og:image" content="http://carboncalc.initiumlab.com/images/facebookshare.9d8483bd.png">
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
      <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
